# CodeForge-AI

./: .gitignore  BACKEND_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
backend/: .env.example  Dockerfile  README.md  README_BACKEND.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: code_agent.py  orchestrator.py  pedagogy_agent.py  prompts.py  qa_agent.py  research_agent.py  roadmap_agent.py  wireframe_agent.py
backend/app/agents/core/: __init__.py  llm.py  memory.py  resilience.py
backend/app/agents/graph/: __init__.py  nodes.py  state.py  workflows.py
backend/app/api/: router.py
backend/app/api/endpoints/: agents.py  profiles.py  projects.py  student.py  waitlist.py
backend/app/core/: auth.py  config.py  exceptions.py  logging.py
backend/app/middleware/: csrf.py  rate_limiter.py  request_tracking.py
backend/app/schemas/: protocol.py
backend/app/services/: database.py  github.py  job_queue.py  llm_orchestrator.py  supabase.py  validation.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_endpoints.py  test_exceptions.py  test_github.py  test_graph_workflows.py  test_hardening.py  test_job_queue.py  test_middleware.py  test_new_features.py  test_orchestrator.py  test_profiles.py  test_projects.py  test_student.py  test_validation.py
database/: README.md  combined_migrations.sql  config.toml  create_profile_trigger.sql
docs/: App_Flow.md  Backend_Schema.md  (+4 more)
(+110 files in other folders)
